[metadata]
name = datafileparser
version = 0.1.0
author = Me
description = A brief description of your project
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pandas
    mutmut

[mutmut]
paths_to_mutate=src

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.package_data]
datafileparser =
    *.csv